# anyscale-examples

image_processing/: Dockerfile  process_images.py  pyproject.toml
